--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 canonifyurls = true
-title = "WDFN Labs"
+title = "Water Data Labs"
 name = ["Jim Kreft"]
 email = ["jkreft@usgs.gov"]
 preserveTaxonomyNames = true
