--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,9 @@
 version: "3"
 
-#entrypoint: /src/hugoCommand.sh
-
 services:
   hugo:
+    environment:
+      - ENV_HUGO_COMMAND=server
     build: .
     command: server --buildDrafts
     ports:
