Updated the deploy script and docker files to remove the ENTRYPOINT. This required changes to the docker-compose.yml and changes to the instructions in the README.md

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   hugo:
     build: .
-    command: server --buildDrafts
+    command: bash buildDeploy.sh server --buildDrafts
     ports:
       - "1313:1313"
     volumes:
