Eliminating warnings when building

--- a/config.toml
+++ b/config.toml
@@ -2,6 +2,6 @@ canonifyurls = true
 title = "Water Data Labs"
 name = ["Jim Kreft"]
 email = ["jkreft@usgs.gov"]
-preserveTaxonomyNames = true
 paginate = 100
 theme = "wdfn_theme"
+disableKinds=["taxonomyTerm"]
