--- a/themes/wdfn_theme/package.json
+++ b/themes/wdfn_theme/package.json
@@ -20,7 +20,7 @@
     "watch:js": "rollup -c --watch"
   },
   "engines": {
-    "node": "8.12.0"
+    "node": "10.17.0"
   },
   "repository": {
     "type": "git",
@@ -40,26 +40,25 @@
   },
   "homepage": "https://github.com/usgs/wdfn-updates#readme",
   "dependencies": {
-    "wdfn-viz": "^1.0.1"
+    "wdfn-viz": "1.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.6.1",
+    "autoprefixer": "^9.7.3",
     "css-mqpacker": "^7.0.0",
     "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-rev-all": "^2.0.2",
     "mkdirp": "^0.5.1",
-    "node-sass": "^4.12.0",
-    "nodemon": "^1.19.1",
+    "node-sass": "^4.13.0",
+    "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
     "postcss-flexbugs-fixes": "^4.1.0",
-    "rollup": "^1.17.0",
-    "rollup-plugin-alias": "^1.5.2",
+    "rollup": "^1.27.10",
+    "@rollup/plugin-alias": "^2.2.0",
     "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-uglify": "^6.0.2",
-    "uglify-js": "^3.6.0"
+    "rollup-plugin-uglify": "^6.0.4"
   }
 }
