Updated hugo version and node version. Put in explicit instructions on how to run the project locally without Docker.

--- a/themes/wdfn_theme/package.json
+++ b/themes/wdfn_theme/package.json
@@ -20,7 +20,7 @@
     "watch:js": "rollup -c --watch"
   },
   "engines": {
-    "node": "10.17.0"
+    "node": ">= 12.13.1"
   },
   "repository": {
     "type": "git",
