--- a/themes/wdfn_theme/package.json
+++ b/themes/wdfn_theme/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf static && mkdirp static",
     "build": "npm run clean && run-p build:* && npm run hash-assets",
-    "build:css": "mkdirp static/css && node-sass --include-path node_modules/wdfn-viz/src/stylesheets --include-path node_modules/@fortawesome/fontawesome-free/scss src/styles/main.scss static/css/main.css && postcss static/css/main.css -o static/css/main.css",
+    "build:css": "mkdirp static/css && sass --load-path node_modules/wdfn-viz/src/stylesheets --load-path node_modules/@fortawesome/fontawesome-free/scss src/styles/main.scss static/css/main.css && postcss static/css/main.css -o static/css/main.css",
     "build:fonts": "mkdirp static/fonts && cp src/fonts/* static/fonts && cp -r node_modules/wdfn-viz/dist/fonts/* static/fonts",
     "build:images": "mkdirp static/img && cp -r src/images/* static/img && cp -r node_modules/wdfn-viz/dist/img/* static/img",
     "build:js": "mkdirp static/scripts && rollup -c --environment NODE_ENV:production",
@@ -40,25 +40,24 @@
   },
   "homepage": "https://github.com/usgs/wdfn-updates#readme",
   "dependencies": {
-    "wdfn-viz": "1.2.0"
+    "wdfn-viz": "1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^9.7.3",
-    "css-mqpacker": "^7.0.0",
-    "cssnano": "^4.1.10",
     "gulp": "^4.0.2",
     "gulp-rev-all": "^2.0.2",
-    "mkdirp": "^0.5.1",
-    "node-sass": "^4.13.0",
+    "mkdirp": "^1.0.3",
     "nodemon": "^2.0.2",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^6.1.3",
-    "postcss-flexbugs-fixes": "^4.1.0",
-    "rollup": "^1.27.11",
-    "@rollup/plugin-alias": "^2.2.0",
+    "postcss-cli": "^7.1.0",
+    "postcss-csso": "^4.0.0",
+    "postcss-flexbugs-fixes": "^4.2.0",
+    "rollup": "^1.32.0",
+    "@rollup/plugin-alias": "^3.0.1",
     "rollup-plugin-buble": "^0.19.8",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-uglify": "^6.0.4"
+    "rollup-plugin-uglify": "^6.0.4",
+    "sass": "^1.26.2"
   }
 }
