--- a/themes/wdfn_theme/package.json
+++ b/themes/wdfn_theme/package.json
@@ -43,20 +43,19 @@
     "wdfn-viz": "1.5.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.7.5",
+    "autoprefixer": "^9.7.6",
     "gulp": "^4.0.2",
     "gulp-rev-all": "^2.0.3",
     "mkdirp": "^1.0.4",
-    "nodemon": "^2.0.2",
+    "nodemon": "^2.0.3",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.0",
     "postcss-csso": "^4.0.0",
     "postcss-flexbugs-fixes": "^4.2.0",
-    "rollup": "^1.32.1",
-    "@rollup/plugin-alias": "^3.0.1",
-    "rollup-plugin-buble": "^0.19.8",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup": "^2.6.1",
+    "@rollup/plugin-alias": "^3.1.0",
+    "@rollup/plugin-buble": "^0.21.3",
+    "rollup-plugin-node-resolve": "^5",
     "rollup-plugin-uglify": "^6.0.4",
     "sass": "^1.26.3"
   }
