--- a/themes/wdfn_theme/package.json
+++ b/themes/wdfn_theme/package.json
@@ -52,10 +52,10 @@
     "postcss-cli": "^7.1.1",
     "postcss-csso": "^4.0.0",
     "postcss-flexbugs-fixes": "^4.2.1",
-    "rollup": "^2.7.3",
+    "rollup": "^2.9.1",
     "@rollup/plugin-alias": "^3.1.0",
     "@rollup/plugin-buble": "^0.21.3",
-    "rollup-plugin-node-resolve": "^5.2.0",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "rollup-plugin-uglify": "^6.0.4",
     "sass": "^1.26.5"
   }
