--- a/data/roadmap/roadmap.yaml
+++ b/data/roadmap/roadmap.yaml
@@ -16,3 +16,9 @@ categories:
   -
     name: "Stakeholder outreach"
     status: "in progress"
+reach_goals:
+  - Prototype alert service
+  - do the thing
+  - and the other thing
+  - not because it is easy
+  - but because it is hard
