--- a/data/roadmap/roadmap.yaml
+++ b/data/roadmap/roadmap.yaml
@@ -3,7 +3,7 @@
 
 categories:
   - 
-    name: "Next-gen landing pages with improved user navigation"
+    name: "Extend monitoring location pages"
     status: "in progress"
     things: 
       - 
@@ -13,35 +13,42 @@ categories:
         thing: "Upstream basin"
         status: on deck
       - 
-        thing: "Groundwater daily value hydrograph"
+        thing: "Groundwater Daily value hydrograph"
         status: in progress
       - status: Done
-        thing: "Celsius and fahrenheit degrees on temperature scales"
+        thing: "Celsius and Fahrenheit Degrees on Temperature Scales"
       - status: Done
-        thing: "Refine axis scaling"
+        thing: "Axis Scaling"
       - status: Done
-        thing: "Multiple time series with the same parameter"
+        thing: "Multiple Time Series with the Same Parameter"
       - status: Done
-        thing: "Toggling the median"
+        thing: "Toggling the Median"
       - status: Done
-        thing: "Monitoring location cameras"
+        thing: "Monitoring Location Cameras"
       - status: Done
-        thing: "NLDI on the cloud"
+        thing: "NLDI on the Cloud"
       - status: Done
-        thing: "Brush on hydrograph"
+        thing: "Brush on Hydrograph"
       - status: Done
-        thing: "Brush handles"
+        thing: "Brush Handles"
       - status: Done
-        thing: "Repositories page"
+        thing: "Repositories Page"
       - status: Done
-        thing: "Collapsible legend on NLDI maps"
+        thing: "Collapsible Legend on NLDI Maps"
       - status: Done
-        thing: "Save state of hydrograph"
+        thing: "Save State of Hydrograph"
       - status: Done
-        thing: "Use NLDI to show upstream basin"
+        thing: "Use NLDI to Show Upstream Basin"
       - status: Done
-        thing: "Parameter period of record"
-
+        thing: "Add User Parameters to Graph-images Service"
+      - status: Done
+        thing: "Image Export"
+      - status: Done
+        thing: "Parameter Period of Record"
+      - status: Done
+        thing: "Networks Pages"
+      - status: On Deck
+        thing: "Upstream basin"
   -
     name: "Stakeholder Outreach"
     status: "In Progress"
@@ -51,72 +58,46 @@ categories:
         thing: "Water quality outreach and listening sessions"
        -
         status: In Progress
-        thing: "NWIS Annual Survey"
+        thing: "NWIS Annual Survey, launching for public on July 20, 2020"
        -
         status: Done
-        thing: "NWISweb user research (18F Phase I)"
+        thing: "NWISweb User Research (18F Phase I)"
        -
         status: In Progress
-        thing: "WDFN user testing (18F Phase II)"
+        thing: "WDFN User Testing (18F Phase II)"
+         -
+        status: Upcoming
+        thing: "Presentations at Fall Scientific Meetings"
   -
-    name: "Next-generation data delivery services"
+    name: "Data Delivery Services"
     status: "In Progress"
     things:
        -
         status: Done
-        thing: "MVP of daily values data service"
-       - thing: MVP of hydrograph image service
-         status: done
-       - thing: Experiment with OGC API - Features
-         status: done
-       - thing: USGS-Specific implemetation of OGC API - Features
-         status: done
-       - status: In Progress
-         thing: "MVP of discrete groundwater levels data service"
+        thing: "MVP of Daily Values Data Service"
+       -
+        status: In Progress
+        thing: "MVP of Discrete GroundWater Levels Data Service"
        -
         status: On Deck
-        thing: "MVP of next generation instantaneous data service"
+        thing: "MVP of Instantaneous Data Service"
        -
         status: Upcoming
-        thing: "Next-generation daily values data service (all data)"
+        thing: "Daily Values Data Service (all data)"
 
   -
-    name: "Next-generation networks service and networks pages"
+    name: "Networks of related locations"
     status: "in progress"
     things:
       -
         thing: "Network data management"
         status: in progress
-      - thing: "Add network metadata to OGC API"
-        status: in progress
-      - status: on deck
-        thing: "Put network metadata on Network pages"
-      - status: Done
-        thing: "MVP of network pages"
-      - status: Done
-        thing: "MVP network metadata management and services"
-
-
-
-
+  -
+    name: "Next generation observation services"
+    status: "in progress"
 
 # reach goals are simpler, just a single phrase or sentence to describe a thing that we may do.  If it really becomes a
 # thing we will do, it gets promoted to categories and is broken down as neccessary
 reach_goals:
-  - Prototype next generation Alert Service
+  - Prototype Alert Service
   - Search and Filter Prototype (18F Phase II, deployed to demo space)
-
-out_years:
-  - Next-gen monitoring location service
-  - Next-gen current conditions maps
-  - Next-gen monitoring location summary service
-  - Next-gen instantaneous values service
-  - Next-gen best available time series service
-  - Next-gen WaterAlert notification system
-  - Next-gen current conditions services
-  - Time series statistics services
-  - Next-gen custom networks service for public users
-  - Discrete water quality data services
-  - Next-gen daily values services for all data
-  - Next-generation discrete water use data services
-  - Next-generation time series statistics service
