--- a/data/roadmap/roadmap.yaml
+++ b/data/roadmap/roadmap.yaml
@@ -3,7 +3,7 @@
 
 categories:
   - 
-    name: "Next-gen landing pages with improved user navigation"
+    name: "Next-generation landing pages with improved user navigation"
     status: "in progress"
     things: 
       - 
@@ -69,7 +69,7 @@ categories:
          status: done
        - thing: Experiment with OGC API - Features
          status: done
-       - thing: USGS-Specific implemetation of OGC API - Features
+       - thing: MVP USGS-Specific implemetation of OGC API - Features
          status: done
        - status: In Progress
          thing: "MVP of discrete groundwater levels data service"
@@ -106,17 +106,19 @@ reach_goals:
   - Prototype next generation Alert Service
   - Search and Filter Prototype (18F Phase II, deployed to demo space)
 
-out_years:
-  - Next-gen monitoring location service
-  - Next-gen current conditions maps
-  - Next-gen monitoring location summary service
-  - Next-gen instantaneous values service
-  - Next-gen best available time series service
-  - Next-gen WaterAlert notification system
-  - Next-gen current conditions services
+next_year:
+  - Next-generation monitoring location service
+  - Next-generation current conditions maps
+  - Next-generation monitoring location summary service
+  - Next-generation instantaneous values service
+  - Next-generation best available time series service
+
+future_years:
+  - Next-generation WaterAlert notification system
+  - Next-generation current conditions services
   - Time series statistics services
-  - Next-gen custom networks service for public users
+  - Next-generation custom networks service for public users
   - Discrete water quality data services
-  - Next-gen daily values services for all data
+  - Next-generation daily values services for all data
   - Next-generation discrete water use data services
   - Next-generation time series statistics service
