--- a/data/roadmap/roadmap.yaml
+++ b/data/roadmap/roadmap.yaml
@@ -7,14 +7,10 @@ categories:
     status: "in progress"
     things:
       - 
-        thing: "Brush on hydrograph"
-        status: done
-      -
-        thing: "Upstream basin"
-        status: on deck
-      - 
         thing: "Groundwater daily value hydrograph"
         status: in progress
+      - thing: "Brush on hydrograph"
+        status: done
       - status: Done
         thing: "Celsius and fahrenheit degrees on temperature scales"
       - status: Done
@@ -62,6 +58,10 @@ categories:
     name: "Next-generation data delivery services"
     status: "In Progress"
     things:
+      - status: In Progress
+        thing: "MVP of discrete groundwater levels data service"
+      - status: On Deck
+        thing: "MVP of next generation instantaneous data service"
        -
         status: Done
         thing: "MVP of daily values data service"
@@ -71,14 +71,8 @@ categories:
          status: done
        - thing: MVP USGS-Specific implemetation of OGC API - Features
          status: done
-       - status: In Progress
-         thing: "MVP of discrete groundwater levels data service"
-       -
-        status: On Deck
-        thing: "MVP of next generation instantaneous data service"
-       -
-        status: Upcoming
-        thing: "Next-generation daily values data service (all data)"
+
+
 
   -
     name: "Next-generation networks service and networks pages"
@@ -107,6 +101,7 @@ categories:
 reach_goals:
   - Prototype next generation Alert Service
   - Search and Filter Prototype (18F Phase II, deployed to demo space)
+  - "Next-generation daily values data service (all data)"
 
 next_year:
   - Next-generation WaterAlert notification system
