--- a/data/roadmap/roadmap.yaml
+++ b/data/roadmap/roadmap.yaml
@@ -54,23 +54,24 @@ categories:
        -
         status: In Progress
         thing: "WDFN user testing (18F Phase II)"
+
   -
     name: "Next-generation data delivery services"
     status: "In Progress"
     things:
-      - status: In Progress
+      -
+        status: In Progress
         thing: "MVP of discrete groundwater levels data service"
       - status: On Deck
         thing: "MVP of next generation instantaneous data service"
-       -
-        status: Done
+      - status: Done
         thing: "MVP of daily values data service"
-       - thing: MVP of hydrograph image service
-         status: done
-       - thing: Experiment with OGC API - Features
-         status: done
-       - thing: MVP USGS-Specific implemetation of OGC API - Features
-         status: done
+      - thing: MVP of hydrograph image service
+        status: done
+      - thing: Experiment with OGC API - Features
+        status: done
+      - thing: MVP USGS-Specific implemetation of OGC API - Features
+        status: done
 
 
 
