--- a/data/roadmap/roadmap.yaml
+++ b/data/roadmap/roadmap.yaml
@@ -49,7 +49,7 @@ categories:
       - status: Done
         thing: "Toggling the median"
       - status: Done
-        thing: "Monitoring location cameras"
+        thing: "Monitoring location cameras prototype"
       - status: Done
         thing: "[NLDI](https://labs.waterdata.usgs.gov/about-nldi/index.html) on the cloud"
       - status: Done
