--- a/data/roadmap/roadmap.yaml
+++ b/data/roadmap/roadmap.yaml
@@ -10,8 +10,18 @@ categories:
       -
         status: In Progress
         thing: "MVP of discrete groundwater levels data service"
+      - thing: Cloud native groundwater levels data processing
+        status: in progress
+      - thing: Operational refinement of cloud-native data processing pipeline
+        status: in progress
+      - thing: Push groundwater levels data from new systems into legacy systems
+        status: on deck
       - status: On Deck
         thing: "MVP of next generation instantaneous data service"
+      - status: On Deck
+        thing: "Cloud native instantaneous data processing pipeline"
+      - thing: MVP of cloud-native data processing pipeline
+        status: done
       - status: Done
         thing: "MVP of daily values data service"
       - thing: MVP of hydrograph image service
