--- a/themes/wdfn_theme/package.json
+++ b/themes/wdfn_theme/package.json
@@ -43,20 +43,21 @@
     "wdfn-viz": "1.8.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
+    "@rollup/plugin-alias": "^3.1.1",
+    "@rollup/plugin-buble": "^0.21.3",
+    "@rollup/plugin-node-resolve": "^10.0.0",
+    "autoprefixer": "^10.0.1",
     "gulp": "^4.0.2",
     "gulp-rev-all": "^2.0.3",
     "mkdirp": "^1.0.4",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
-    "postcss-cli": "^7.1.2",
-    "postcss-csso": "^4.0.0",
-    "postcss-flexbugs-fixes": "^4.2.1",
-    "rollup": "^2.32.1",
-    "@rollup/plugin-alias": "^3.1.1",
-    "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-node-resolve": "^10.0.0",
+    "postcss": "^8.1.6",
+    "postcss-cli": "^8.2.0",
+    "postcss-csso": "^5.0.0",
+    "postcss-flexbugs-fixes": "^5.0.1",
+    "rollup": "^2.33.1",
     "rollup-plugin-uglify": "^6.0.4",
-    "sass": "^1.27.0"
+    "sass": "^1.29.0"
   }
 }
