--- a/themes/wdfn_theme/package.json
+++ b/themes/wdfn_theme/package.json
@@ -12,12 +12,14 @@
     "build:fonts": "mkdirp static/fonts && cp src/fonts/* static/fonts && cp -r node_modules/wdfn-viz/dist/fonts/* static/fonts",
     "build:images": "mkdirp static/img && cp -r src/images/* static/img && cp -r node_modules/wdfn-viz/dist/img/* static/img",
     "build:js": "mkdirp static/scripts && rollup -c --environment NODE_ENV:production",
+    "build:uswdsinit": "mkdirp static/scripts && cp -r node_modules/uswds/dist/js/uswds-init.min.* static/scripts",
     "hash-assets": "gulp --gulpfile ./gulpfile.js revall",
     "watch": "run-p watch:*",
     "watch:css": "nodemon -w src/styles -e scss -x \"npm run build:css\"",
     "watch:fonts": "npm run build:fonts",
     "watch:images": "npm run build:images",
-    "watch:js": "rollup -c --watch"
+    "watch:js": "rollup -c --watch",
+    "watch:uswdsinit": "npm run build:uswdsinit"
   },
   "engines": {
     "node": ">= 14.15.0"
@@ -40,24 +42,24 @@
   },
   "homepage": "https://github.com/usgs/wdfn-updates#readme",
   "dependencies": {
-    "wdfn-viz": "1.8.0"
+    "wdfn-viz": "1.9.0"
   },
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.1",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-node-resolve": "^11.0.0",
-    "autoprefixer": "^10.0.4",
+    "@rollup/plugin-node-resolve": "^11.0.1",
+    "autoprefixer": "^10.1.0",
     "gulp": "^4.0.2",
     "gulp-rev-all": "^2.0.3",
     "mkdirp": "^1.0.4",
     "nodemon": "^2.0.6",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.1.10",
-    "postcss-cli": "^8.3.0",
+    "postcss": "^8.2.1",
+    "postcss-cli": "^8.3.1",
     "postcss-csso": "^5.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "rollup": "^2.34.0",
-    "rollup-plugin-uglify": "^6.0.4",
-    "sass": "^1.29.0"
+    "rollup": "^2.35.1",
+    "rollup-plugin-terser": "^7.0.2",
+    "sass": "^1.30.0"
   }
 }
