--- a/themes/wdfn_theme/package.json
+++ b/themes/wdfn_theme/package.json
@@ -7,13 +7,12 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf static && mkdirp static",
-    "build": "npm run clean && run-p build:* && npm run hash-assets",
+    "build": "npm run clean && run-p build:* ",
     "build:css": "mkdirp static/css && sass --load-path node_modules/wdfn-viz/src/stylesheets --load-path node_modules/@fortawesome/fontawesome-free/scss src/styles/main.scss static/css/main.css && postcss static/css/main.css -o static/css/main.css",
     "build:fonts": "mkdirp static/fonts && cp src/fonts/* static/fonts && cp -r node_modules/wdfn-viz/dist/fonts/* static/fonts",
     "build:images": "mkdirp static/img && cp -r src/images/* static/img && cp -r node_modules/wdfn-viz/dist/img/* static/img",
     "build:js": "mkdirp static/scripts && rollup -c --environment NODE_ENV:production",
     "build:uswdsinit": "mkdirp static/scripts && cp -r node_modules/uswds/dist/js/uswds-init.min.* static/scripts",
-    "hash-assets": "gulp --gulpfile ./gulpfile.js revall",
     "watch": "run-p watch:*",
     "watch:css": "nodemon -w src/styles -e scss -x \"npm run build:css\"",
     "watch:fonts": "npm run build:fonts",
@@ -22,7 +21,7 @@
     "watch:uswdsinit": "npm run build:uswdsinit"
   },
   "engines": {
-    "node": ">= 14.16.0"
+    "node": ">= 14.17.0"
   },
   "repository": {
     "type": "git",
@@ -42,24 +41,22 @@
   },
   "homepage": "https://github.com/usgs/wdfn-updates#readme",
   "dependencies": {
-    "wdfn-viz": "1.11.1"
+    "wdfn-viz": "1.14.0"
   },
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.2",
+    "@rollup/plugin-alias": "^3.1.4",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-node-resolve": "^13.0.0",
-    "autoprefixer": "^10.2.6",
-    "gulp": "^4.0.2",
-    "gulp-rev-all": "^3.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.2",
+    "autoprefixer": "^10.3.1",
     "mkdirp": "^1.0.4",
-    "nodemon": "^2.0.7",
+    "nodemon": "^2.0.12",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.0",
+    "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "postcss-csso": "^5.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "rollup": "^2.51.1",
+    "rollup": "^2.53.3",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.34.1"
+    "sass": "^1.35.2"
   }
 }
