--- a/themes/wdfn_theme/package.json
+++ b/themes/wdfn_theme/package.json
@@ -8,7 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf static && mkdirp static",
     "build": "npm run clean && run-p build:* ",
-    "build:css": "mkdirp static/css && sass --load-path node_modules/wdfn-viz/src/stylesheets --load-path node_modules/@fortawesome/fontawesome-free/scss src/styles/main.scss static/css/main.css && postcss static/css/main.css -o static/css/main.css",
+    "build:css": "mkdirp static && sass --load-path node_modules/wdfn-viz/src/stylesheets --load-path node_modules/uswds/src/stylesheets src/styles/main.scss static/main.css && postcss static/main.css -o static/main.css",
     "build:fonts": "mkdirp static/fonts && cp src/fonts/* static/fonts && cp -r node_modules/wdfn-viz/dist/fonts/* static/fonts",
     "build:images": "mkdirp static/img && cp -r src/images/* static/img && cp -r node_modules/wdfn-viz/dist/img/* static/img",
     "build:js": "mkdirp static/scripts && rollup -c --environment NODE_ENV:production",
@@ -21,7 +21,7 @@
     "watch:uswdsinit": "npm run build:uswdsinit"
   },
   "engines": {
-    "node": ">= 14.17.0"
+    "node": ">= 16.13.1"
   },
   "repository": {
     "type": "git",
@@ -40,23 +40,23 @@
     "url": "https://github.com/usgs/wdfn-updates/issues"
   },
   "homepage": "https://github.com/usgs/wdfn-updates#readme",
-  "dependencies": {
-    "wdfn-viz": "1.14.0"
-  },
   "devDependencies": {
-    "@rollup/plugin-alias": "^3.1.4",
+    "@rollup/plugin-alias": "^3.1.8",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-node-resolve": "^13.0.2",
-    "autoprefixer": "^10.3.1",
+    "@rollup/plugin-node-resolve": "^13.0.6",
+    "autoprefixer": "^10.4.0",
     "mkdirp": "^1.0.4",
-    "nodemon": "^2.0.12",
+    "nodemon": "^2.0.15",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.3.6",
-    "postcss-cli": "^8.3.1",
+    "postcss": "^8.4.4",
+    "postcss-cli": "^9.0.2",
     "postcss-csso": "^5.0.1",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "rollup": "^2.53.3",
+    "rollup": "^2.60.2",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.35.2"
+    "sass": "^1.44.0"
+  },
+  "dependencies": {
+    "wdfn-viz": "2.0.1"
   }
 }
