--- a/data/roadmap/roadmap.yaml
+++ b/data/roadmap/roadmap.yaml
@@ -48,133 +48,92 @@ categories:
     things:
       -
         status: Done
-        thing: "18F Phase I: Kickoff & Discovery"
+        thing: "18F Phase I: Discovery"
       -
         status: Done
-        thing: "18F Phase I: User Research"
+        thing: "18F Phase II: Search and Filter mapper alpha development"
       -
-        status: Done
-        thing: "18F Phase I: Synthesis & prioritization"
+        status: on deck
+        thing: "Search and Filter mapper beta development"
       -
-        status: Done
-        thing: "18F Phase I: Roadmap & Low-fidelity prototyping"
+        status: on deck
+        thing: "Consolidated download beta development"
       -
-        status: Done
-        thing: "18F Phase II: Planning"
-      -
-        status: "In progress"
-        thing: "18F Phase II: Prototype"
-      -
-        status: "In progress"
-        thing: "18F Phase II: Iterate"
-      -
-        status: "On deck"
-        thing: "18F Phase II: Transition & Handoff"
+        status: upcoming
+        thing: "Decommissioning NWISmapper"
   -
     name: "Next-generation monitoring location pages"
     status: "in progress"
     things:
       -
+        status: done
+        thing: "Site-specific alerts (info, warning, errors)"
+      -
+        status: done
+        thing: "Site-specific data context"
+      - 
+        status: done
+        thing: "Groundwater-specific hydrograph options (for sites with only field visits)"
+      - 
         status: in progress
-        thing: "Usability testing"
+        thing: "Groundwater qualifiers in data table"
       -
         status: in progress
-        thing: "Implement new date range picker and tooltips"
-      - status: in progress
-        thing: "Use USGS National Map background layers"
-      - status: done
-        thing: "Put AHPS flood levels on gage height hydrograph"
+        thing: "Monitoring Location Pages Minimal Viable Product (MVP)"
       -
-        status: done
-        thing: "Compile user feedback and prioritize new features and usability improvements"
+        status: on deck
+        thing: "Allow two parameters on hydrograph"
       -
-        status: done
-        thing: "Groundwater daily value hydrograph"
+        status: on deck
+        thing: "Provide daily statistics for parameters"
       -
-        status: done
-        thing: "Brush on hydrograph"
-      -
-        status: Done
-        thing: "Celsius and fahrenheit degrees on temperature scales"
-      -
-        status: Done
-        thing: "Refine axis scaling"
-      -
-        status: Done
-        thing: "Multiple time series with the same parameter"
-      -
-        status: Done
-        thing: "Toggling the median"
-      -
-        status: Done
-        thing: "Monitoring location cameras prototype"
-      -
-        status: Done
-        thing: "[NLDI](https://labs.waterdata.usgs.gov/about-nldi/index.html) on the cloud"
-      -
-        status: Done
-        thing: "Brush on hydrograph"
-      -
-        status: Done
-        thing: "Brush handles"
-      -
-        status: Done
-        thing: "Repositories page"
-      -
-        status: Done
-        thing: "Save state of hydrograph"
-      -
-        status: Done
-        thing: "Use [NLDI](https://labs.waterdata.usgs.gov/about-nldi/index.html) to show upstream basin and upstream and downstream monitoring locations"
-      -
-        status: Done
-        thing: "Parameter period of record"
+        status: upcoming
+        thing: "Deliver field and samples measurements"
   -
-    name: "Next-generation networks service and networks pages"
-    status: "in progress"
-    things:
-      -
-        status: done
-        thing: "Network data management"
-      -
-        status: done
-        thing: "Add network metadata to OGC API"
-      -
-        status: done
-        thing: "Link to network page from monitoring location pages"
-      -
-        status: in progress
-        thing: "Put network metadata on Network pages"
-      -
-        status: Done
-        thing: "MVP of network pages"
-      -
-        status: Done
-        thing: "MVP network metadata management and services"
-  -
-    name: "Stakeholder Outreach"
+    name: "Next-generation WaterAlert"
     status: "In Progress"
     things:
       -
-        status: "In Progress"
-        thing: "Water quality outreach and listening sessions"
+        status: in progress
+        thing: "WaterAlert alpha development"
       -
-        status: "In Progress"
-        thing: "NWIS Annual Survey, release for public on July 20, 2020"
+        status: on deck
+        thing: "WaterAlert beta development"
+      -
+        status: on deck
+        thing: "Communicating the next generation features and roadmap"
+      -
+        status: on deck
+        thing: "Transitioning user accounts from legacy to next generation"
+      -
+        status: upcoming
+        thing: "Transition to next generation WaterAlert"
+      -
+        status: upcoming
+        thing: "Decommissioning legacy WaterAlert"
+  -
+    name: "Stakeholder Outreach and Discovery"
+    status: "In Progress"
+    things:
       -
         status: done
-        thing: "Make a publicly accessible roadmap"
+        thing: "Discovery on groundwater censored data"
       -
-        status: Done
-        thing: "NWISweb user research (18F Phase I)"
+        status: in progress
+        thing: "NWIS Annual Survey"
       -
-        status: "In Progress"
-        thing: "WDFN user testing (18F Phase II)"
+        status: in progress
+        thing: "Discovery on water quality tabular data"
+      -
+        status: on deck
+        thing: "Discovery on modernizing WaterQualityWatch, WaterWatch, GroundWaterWatch"
+      -
+        status: upcoming
+        thing: "Discovery on delivering multiple sites simultaneously"
 
 reach_goals:
-  - "Prototype next generation Alert Service"
-  - "Search and Filter Prototype (18F Phase II, deployed to demo space)"
-  - "Next-generation daily values data service (all data)"
+  - "Updated delivery of samples data (discrete water quality data)"
+  - "Decommissioning NWISweb current condition pages"
 
 future_years:
   - "Next-generation current conditions services"
@@ -183,13 +142,15 @@ future_years:
   - "Discrete water quality data services"
   - "Next-generation discrete water use data services"
   - "Next-generation time series statistics service"
+  - "Water use data delivery"
 
 next_year:
-  - "Next-generation WaterAlert notification system"
   - "Next-generation monitoring location service"
-  - "Next-generation current conditions maps"
   - "Next-generation monitoring location summary service"
   - "Next-generation instantaneous values service"
   - "Next-generation best available time series service"
   - "Next-generation daily values services for all data"
-
+  - "Decommission NWISweb qwdata"
+  - "Decommission NWISweb current conditions pages"
+  - "Next-generation replacement for the Watches"
+  - "Multi-site report (features to support reviewing data from multiple sites simultaneously)"
