--- a/themes/wdfn_theme/package.json
+++ b/themes/wdfn_theme/package.json
@@ -8,11 +8,11 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "clean": "rm -rf static && mkdirp static",
     "build": "npm run clean && run-p build:* ",
-    "build:css": "mkdirp static && sass --load-path node_modules/wdfn-viz/src/stylesheets --load-path node_modules/uswds/src/stylesheets src/styles/main.scss static/main.css && postcss static/main.css -o static/main.css",
+    "build:css": "mkdirp static && sass --load-path node_modules/wdfn-viz/src/stylesheets --load-path node_modules/@uswds/uswds/src/stylesheets --load-path node_modules/@uswds/uswds/packages src/styles/main.scss static/main.css && postcss static/main.css -o static/main.css",
     "build:fonts": "mkdirp static/fonts && cp src/fonts/* static/fonts && cp -r node_modules/wdfn-viz/dist/fonts/* static/fonts",
     "build:images": "mkdirp static/img && cp -r src/images/* static/img && cp -r node_modules/wdfn-viz/dist/img/* static/img",
     "build:js": "mkdirp static/scripts && rollup -c --environment NODE_ENV:production",
-    "build:uswdsinit": "mkdirp static/scripts && cp -r node_modules/uswds/dist/js/uswds-init.min.* static/scripts",
+    "build:uswdsinit": "mkdirp static/scripts && cp -r node_modules/@uswds/uswds/dist/js/uswds-init.min.* static/scripts",
     "watch": "run-p watch:*",
     "watch:css": "nodemon -w src/styles -e scss -x \"npm run build:css\"",
     "watch:fonts": "npm run build:fonts",
@@ -43,20 +43,20 @@
   "devDependencies": {
     "@rollup/plugin-alias": "^3.1.9",
     "@rollup/plugin-buble": "^0.21.3",
-    "@rollup/plugin-node-resolve": "^13.2.1",
-    "autoprefixer": "^10.4.5",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "autoprefixer": "^10.4.7",
     "mkdirp": "^1.0.4",
-    "nodemon": "^2.0.15",
+    "nodemon": "^2.0.16",
     "npm-run-all": "^4.1.5",
-    "postcss": "^8.4.12",
+    "postcss": "^8.4.13",
     "postcss-cli": "^9.1.0",
     "postcss-csso": "^6.0.0",
     "postcss-flexbugs-fixes": "^5.0.2",
-    "rollup": "^2.70.2",
+    "rollup": "^2.72.0",
     "rollup-plugin-terser": "^7.0.2",
-    "sass": "^1.50.1"
+    "sass": "^1.51.0"
   },
   "dependencies": {
-    "wdfn-viz": "2.1.2"
+    "wdfn-viz": "3.0.0"
   }
 }
